--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
-  "name": "angular-applicationinsights",
-  "version": "0.2.6",
-  "homepage": "https://github.com/khaines/angular-applicationinsights",
+  "name": "angular-appinsights",
+  "version": "0.2.9",
+  "homepage": "https://github.com/Soulskater/angular-applicationinsights",
   "authors": [
-    "Ken Haines <ken@kenhaines.net>"
+    "Gabor Meszaros <gmeszaros007@gmail.com>"
   ],
   "description": "An angularJS module for using Microsoft Application Insights from within an angularJS application",
   "main": ["dist/angular-applicationinsights.min.js", "dist/angular-applicationinsights.js"],
