Fix name conflict in bower

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-appinsights",
+  "name": "angular-appinsights-service",
   "version": "0.2.9",
   "homepage": "https://github.com/Soulskater/angular-applicationinsights",
   "authors": [
