--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "angular-applicationinsights",
   "description": "An angularJS module for sending application telemetry to Microsoft Application Insights",
-  "author": "Ken Haines <ken@kenhaines.net> (http://www.kenhaines.net)",
+  "author": "Gabor Meszaros <gmeszaros007@gmail.com>",
   "keywords": [
     "angularJS",
     "app insights",
@@ -19,9 +19,10 @@
     "applicationinsights",
     "stats"
   ],
-  "version": "0.2.8",
+  "version": "0.2.9",
   "files": [
-    "dist/angular-applicationinsights.min.js"
+    "dist/angular-applicationinsights.min.js",
+    "dist/angular-applicationinsights.js.map"
   ],
   "main": "dist/angular-applicationinsights.min.js",
   "scripts": {
@@ -29,7 +30,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/khaines/angular-applicationinsights"
+    "url": "https://github.com/Soulskater/angular-applicationinsights"
   },
   "devDependencies": {
     "angular": "~1.3.14",
